--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches:
       - develop
+strategy:
+  matrix:
+    go: ["1.22", 1.23']
 jobs:
   check-application:
     runs-on: ubuntu-latest
@@ -10,6 +13,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.23
+          go-version: ${{ matrix.go}}
       - run: go test
       - run: go run math.go
